# Reborn

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  project.4coder
.github/actions/setup-msvc/: action.yaml
.github/actions/setup-msvc/scripts/: setup.ps1
.github/workflows/: main.yaml
include/reborn/: CMakeLists.txt  characters.h  io.h  iterator.h  math.h  memory.h  strings.h  types.h
include/reborn/concurrency/: CMakeLists.txt  mutex.h  mutex_win32.h  thread.h  thread_win32.h
include/reborn/containers/: hash_table.h
include/reborn/filesystem/: file.h  paths.h
include/reborn/format/: CMakeLists.txt  format.h
include/reborn/memory/: allocator.h  arena.h  buffer.h  prelude.h  scratch_buffer.h
include/reborn/memory/allocator/: arena.h
include/reborn/time/: CMakeLists.txt  clock.h
scripts/: reborn_env.ps1
src/: CMakeLists.txt  io.cpp  iterator.cpp  strings.cpp
src/concurrency/: CMakeLists.txt  condition_variable_win32.cpp  mutex.cpp  mutex_win32.cpp  thread.cpp  thread_win32.cpp
src/filesystem/: CMakeLists.txt  file_win32.cpp  paths_win32.cpp
src/format/: CMakeLists.txt  format.cpp
src/memory/: CMakeLists.txt  allocator.cpp  arena.cpp  buffer.cpp
src/memory/allocator/: arena.cpp
src/time/: CMakeLists.txt  clock.cpp
tests/: CMakeLists.txt  all.cpp  tests.h
tests/reborn/: all.cpp  characters_tests.cpp  iterator_tests.cpp  memory_tests.cpp  strings_tests.cpp  time_tests.cpp  types_tests.cpp
tests/reborn/concurrency/: all.cpp  condition_variable_tests.cpp  mutex_tests.cpp  thread_tests.cpp
tests/reborn/filesystem/: all.cpp  paths_tests.cpp
tests/reborn/strings/: all.cpp  formatting_tests.cpp  lifecycle_tests.cpp  manipulation_tests.cpp  unicode_tests.cpp
